sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: illegal start of simple expression
do ( var tri=true
     ^AlgCocktailSort1:19: error: ')' expected but '}' found.
}
^