sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
var lg= getNombreValeurs()
do ( var tri=true
	for (i<- 0 to lg-2){
	if (plusPetit (i, i+1)){
		echange()
		tri=false
	}
}
for (i<- lg-2 to 0 by -1){
	if (plusPetit(i+1, i)){
		echange()
		tri=false
	}
}
)
while { tri=false}
}
